# kernel-python-telegram-bot

./: .gitignore  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  bot.py  environment.sh  main.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: python-app.yml
bot/: config.py  main.py
bot/handlers/: errors.py  help.py
bot/services/: database.py
config/: auth.py
docs/: DEPLOYMENT.md  SETUP.md  TESTING.md
modules/: main_command.py  modules.py
src/: config.py  main.py
src/handlers/: errors.py  help.py  start.py  unknown.py
src/handlers/commom/: help.py  start.py
src/handlers/fallback/: errors.py  unknown.py
src/services/: auth.py  database.py
src/utils/: config_loader.py  logger.py
tests/: __init__.py  test_config.py  test_database.py  test_handlers.py
