[project]
name = "kernel-telegram-bot"
version = "2025.10.15"
description = "Kernel for a telegram bot based on python-telegram-bot"
authors = [
    {name = "LoboGuardian",email = "loboguardian.dev@gmail.com"}
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "python-telegram-bot (>=21.11.1,<22.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
